Fix animation on mobile

--- a/src/routes/index.module.scss
+++ b/src/routes/index.module.scss
@@ -95,7 +95,7 @@
   }
 
   &:nth-child(n+51):nth-child(-n+150) {
-    animation: slideUp 1.2s ease-out 0s forwards;
+    animation: slideUp 1.2s ease-out 2.7s forwards;
   }
 
   &:nth-child(-n+150) {
